--- a/deployment.yaml
+++ b/deployment.yaml
@@ -16,9 +16,9 @@ spec:
     spec:
       containers:
       - name: hello-world
-        image: tutum/hello-world:latest
+        image: gcr.io/google-samples/hello-app:1.0
         ports:
-        - containerPort: 80
+        - containerPort: 8080
           name: http
         resources:
           requests:
